SERVER-81216 Properly stringify StatusWith<T> in test assertions