src/mongo/base/status_with.h
@@ -42,6 +42,7 @@
 #include "mongo/base/status.h"
 #include "mongo/bson/util/builder_fwd.h"
 #include "mongo/platform/compiler.h"
+#include "mongo/unittest/stringify.h"
 #include "mongo/util/assert_util_core.h"
 
 namespace mongo {
@@ -180,6 +181,15 @@ private:
     Status _status;
     boost::optional<T> _t;
 };
+
+template <typename T>
+std::string stringifyForAssert(const StatusWith<T>& sw) {
+    if (sw.isOK()) {
+        return unittest::stringify::invoke(sw.getValue());
+    } else {
+        return unittest::stringify::invoke(sw.getStatus());
+    }
+}
 
 template <typename T>
 auto operator<<(std::ostream& stream, const StatusWith<T>& sw)
